--- a/style.css
+++ b/style.css
@@ -1,5 +1,10 @@
-p {
-  background-color: lightblue;
-  margin: 24px;
-  padding: 24px;
+body {
+  text-align: center;
+}
+
+div {
+  width: 200px;
+  height: 200px;
+  background-color: orangered;
+  margin: 0 auto;
 }
