--- a/style.css
+++ b/style.css
@@ -1,6 +1,11 @@
-div {
-  width: 200px;
+.outer {
+  width: 200px; 
   height: 200px;
-  border: 5px solid blue;
-  border-radius: 50%;
+  background-color: #eee;
+}
+
+.with-bg {
+  height: 100%;
+  background-image: url(https://showcases.yalco.kr/html-css/02-08/images/mona-lisa.jpg);
+  background-size: cover;
 }
